removed AI styles\n\nnow the whole project is done by my hands, no AI stuff included anymore

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Odin Recipes</h1>
     <div class="description">
         <p>recipes created by my friend, the AI..</p>
-        <p>lets see how this odin course improves my sylin skillllls</p>
+        <p>lets see how this odin course improves my stylin skillls,<br>
+        i will try to update this from time to time</p>
     </div>
     <div class="recipe-links">
         <a href="recipes/goulash.html">Goulash</a>
