--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a href="../index.html">back to start</a>
+    <a class="back-link" href="../index.html">back to start</a>
     <h1>lasagna</h1>
 </body>
 </html>
