--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">  
 </head>  
 <body>  
-    <a href="../index.html">back to start</a>  
+    <a class="back-link"  href="../index.html">back to start</a>  
     <div class="recipe-content">  
         <h1>Chocolate Chip Cookies</h1>  
         <img src="" alt="chocolate chip cookies">  
