--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">  
 </head>  
 <body>  
-    <a href="../index.html">back to start</a>  
+    <a class="back-link" href="../index.html">back to start</a>  
     <div class="recipe-content">  
         <h1>Vegetarian Curry</h1>  
         <img src="" alt="vegetarian curry">  
